--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- navigation -->
         <nav id="navigation">
             <div>
-                <h2>Sakib shahriyar</h2>
+                <img src="images/logo.png" width="auto" height="auto" alt="logo">
             </div>
             <ul>
                 <li><a href="#">Home</a></li>
